fix profile pic header